<resources>
    <string name="app_name">Dnail</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_sologan_intro">Khám phá vẻ đẹp trong bạn...</string>
    <string name="text_bat_dau_trai_nghiem">Bắt đầu trải nghiệm cùng Dnail</string>
    <string name="text_nhap_sdt">Nhập số điện thoại của bạn</string>
    <string name="text_nhap_ma_otp">Nhập mã OTP</string>
    <string name="text_ma_otp_gui_toi_So">Mã OTP sẽ được gửi tới số</string>
    <string name="text_tiep">Tiếp theo</string>
    <string name="text_gui_lai_ma_sau">Gửi lại mã OTP sau</string>
    <string name="text_hoan_thien_dang_ky">Hoàn thiện đăng ký</string>
    <string name="text_day_la_buoc_cuoi">Đây là bước cuối cùng để trải nhiệm app</string>
    <string name="text_hoan_thanh">Hoàn thành</string>
    <string name="text_ho_ten">Họ tên</string>
    <string name="text_email">Email</string>
    <string name="text_ma_gioi_thieu">Mã giới thiệu</string>
    <string name="text_sdt_trong">Số điện thoại trống!</string>

    <string name="text_sdt_khong_dung">Số điện thoại không đúng!</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="text_trang_chu">Trang chủ</string>
    <string name="text_lich_su">Lịch sử giao dịch</string>
    <string name="text_khuyen_mai">Khuyến mại</string>
    <string name="text_khac">Khác</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="text_nhap_dia_chi_tho_den_lam">Nhập địa chỉ thợ đến làm</string>
    <string name="text_chon_thoi_gian_tho_den_lam">Chọn thời gian thợ đến làm</string>
    <string name="text_chon_vi_tri">Chọn vị trí</string>
    <string name="text_101_nguyen_trai">101 Nguyễn Trãi, Hà Đông, Hà Nội</string>
    <string name="text_chon_ngay">Chọn ngày</string>
    <string name="text_chon_gio">Chọn giờ</string>
    <string name="text_25_to_huu">25 Tố Hữu, Hà Đông, Hà Nội</string>
    <string name="text_chon_thoi_gian">Chọn thời gian</string>
    <string name="text_ok">OK</string>
    <string name="text_tim_tho_mong">Tìm thợ móng</string>
    <string name="text_da_tim_duoc_tho_phu_hop">Đã tìm được thợ phù hơp</string>
    <string name="text_danh_gia_sao">Đánh giá: 3.5 sao/20 lượt đánh giá</string>
    <string name="text_cac_mau_noi_bat">Các mẫu nổi bật</string>
    <string name="text_dang_tim_tho">Đang tìm thợ ...</string>
    <string name="text_huy">Hủy</string>
    <string name="text_dat_tho_lam_mong">Đặt thợ làm móng</string>

    <string name="text_ten_mau">Tên mẫu</string>
    <string name="text_gia">Giá</string>
    <string name="text_tien_mat">Tiền mặt</string>
    <string name="text_ghi_chu">Ghi chú</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_doi_tho_mong">Đổi thợ móng</string>
    <string name="text_phuong_thuc_thanh_toan">Phương thức thanh toán</string>
    <string name="text_them_the">Thêm thẻ</string>
    <string name="text_ma_khuyen_mai">Mã khuyến mại</string>
    <string name="text_dnail_km01">#dnailKM01 - Ưu đãi 20%</string>
    <string name="text_dnail_km02">#dnailKM02 - Ưu đãi 15%</string>
    <string name="text_nhap_ma_khuyen_mai">Nhập mã khuyến mại</string>
    <string name="text_su_dung">Sử dụng</string>
    <string name="text_vui_long_nhap_huong_dan_cho_tho">Vui lòng nhập hướng dẫn cho thợ</string>
    <string name="text_dat_tho_thanh_cong">Đặt thợ thành công</string>
    <string name="text_dia_diem">Địa điểm: </string>
    <string name="text_thoi_gian">Thời gian: </string>
    <string name="text_da_chon">Đã chọn</string>
    <string name="text_mau_nay_co_gia">Mẫu này có giá </string>
    <string name="text_thong_tin_tho">Thông tin thợ</string>
    <string name="text_do_truong_giang">Đỗ Trường Giang</string>
    <string name="text_kinh_nghiem_lam_mong">Kinh nghiệm làm móng 3 năm</string>
    <string name="text_goi_tho">Gọi thợ</string>
    <string name="xoa">OK</string>
    <string name="xoa1">ok</string>
    <string name="text_thoi_gian_dat_lich">Thời gian đặt lịch</string>
    <string name="text_chon_khung_gio">Chọn khung giờ:</string>
    <string name="text_buoi_sang">Buổi sáng</string>
    <string name="text_buoi_chieu">Buổi chiều</string>
    <string name="text_buoi_toi">Buổi tối</string>
    <string name="text_ket_thuc_giao_dich">Kết thúc giao dịch</string>
    <string name="text_thong_tin_ca_nhan">Thông tin cá nhân</string>
    <string name="text_dang_xuat">Đăng xuất</string>
    <string name="text_chinh_sua_ho_so">Chỉnh sửa hồ sơ</string>
    <string name="text_thay_doi_anh_dai_dien">Thay đổi ảnh đại diện</string>
    <string name="text_luu_lai">Lưu lại</string>
    <string name="text_chi_tiet_giao_dich">Chi tiết giao dịch</string>
    <string name="text_gui">Gửi</string>
    <string name="text_dung_ngay">Dùng ngay</string>
    <string name="text_luu_y">Lưu ý: ...</string>
    <string name="text_so_dien_thoai">Số điện thoại</string>
    <string name="text_khong_tim_duoc_dia_chi_tren">Không tìm được địa chỉ trên!</string>
    <string name="text_lich_su_giao_dich">Lịch sử giao dịch</string>
    <string name="text_chi_tiet_khuyen_mai">Chi tiết khuyến mại</string>

    <dimen name="shr_product_grid_spacing">16dp</dimen>
    <dimen name="shr_product_grid_spacing_small">4dp</dimen>
</resources>
