<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/register_fragment"
    android:background="@color/white"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/image_registerActivity_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:layout_margin="@dimen/margin_8dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_hoan_thien_dang_ky"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_hoan_thien_dang_ky"
            android:textSize="@dimen/textsize_hoan_thien_dang_ky"
            android:gravity="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_day_la_buoc_cuoi"
            android:textSize="@dimen/textsize_day_la_buoc_cuoi"
            android:gravity="center"
            />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Dnail.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_ho_ten"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Dnail.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_email"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Dnail.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_ma_gioi_thieu"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_register_idInvite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_registerActivity_next"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_round"
            android:text="@string/text_hoan_thanh"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:padding="@dimen/padding_button"
            />
    </LinearLayout>
</FrameLayout>