<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/layout_editProfile"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/pink_theme"
                android:padding="@dimen/padding_8dp"
                >
                <ImageView
                    android:id="@+id/image_editProfile_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_back_black_24dp"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_chinh_sua_ho_so"
                    android:textSize="30sp"
                    android:gravity="center"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:background="@drawable/bg_abccccc"
                />
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="left"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_avatar"
                android:layout_marginLeft="15dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_thay_doi_anh_dai_dien"
                android:background="@drawable/shape_round_full_pink"
                android:padding="@dimen/padding_4dp"
                android:textColor="@color/white"
                android:drawableRight="@drawable/ic_camera_alt_black_24dp"
                android:gravity="center"
                android:layout_gravity="right"
                android:layout_marginTop="30dp"
                android:layout_marginRight="8dp"
                />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding_hoan_thien_dang_ky"
            >
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Dnail.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_ho_ten"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_editProfile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Dnail.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_email"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_editProfile_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Dnail.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_so_dien_thoai"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_editProfile_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_luu_lai"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/margin_8dp"
        />
</FrameLayout>