<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/layout_personalInformation"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/pink_theme"
                android:padding="@dimen/padding_8dp"
                >
                <ImageView
                    android:id="@+id/image_personalInformation_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_back_black_24dp"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_thong_tin_ca_nhan"
                    android:textSize="30sp"
                    android:gravity="center"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_8dp"
            >

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="left"
                android:src="@drawable/ic_avatar"
                />
            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="250dp"
                    android:layout_height="31dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/text_do_truong_giang" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="giangghj@gmail.com"
                    android:layout_marginLeft="10dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0356865077"
                    android:layout_marginLeft="10dp"
                    />
            </LinearLayout>

            <ImageView
                android:id="@+id/image_personalInformation_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit_black_24dp"
                />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_dang_xuat"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/margin_8dp"
        />
</FrameLayout>